Package_Tools/include-C/ode/h/collision.h


extern void dGeomDestroy (dGeomID geom);
extern void dGeomSetData (dGeomID geom, void* data);
extern void *dGeomGetData (dGeomID geom);
extern void dGeomSetBody (dGeomID geom, dBodyID body);
extern dBodyID dGeomGetBody (dGeomID geom);
extern void dGeomSetPosition (dGeomID geom, dReal x, dReal y, dReal z);
extern void dGeomSetRotation (dGeomID geom, const dMatrix3 R);
extern void dGeomSetQuaternion (dGeomID geom, const dQuaternion Q);
extern const dReal * dGeomGetPosition (dGeomID geom);
extern void dGeomCopyPosition (dGeomID geom, dVector3 pos);
extern const dReal * dGeomGetRotation (dGeomID geom);
extern void dGeomCopyRotation(dGeomID geom, dMatrix3 R);
extern void dGeomGetQuaternion (dGeomID geom, dQuaternion result);
extern void dGeomGetAABB (dGeomID geom, dReal aabb[6]);
extern int dGeomIsSpace (dGeomID geom);
extern dSpaceID dGeomGetSpace (dGeomID);
extern int dGeomGetClass (dGeomID geom);
extern void dGeomSetCategoryBits (dGeomID geom, unsigned long bits);
extern void dGeomSetCollideBits (dGeomID geom, unsigned long bits);
extern unsigned long dGeomGetCategoryBits (dGeomID);
extern unsigned long dGeomGetCollideBits (dGeomID);
extern void dGeomEnable (dGeomID geom);
extern void dGeomDisable (dGeomID geom);
extern int dGeomIsEnabled (dGeomID geom);
enum xxxx
{
	dGeomCommonControlClass = 0,
	dGeomColliderControlClass = 1
};
enum  xxxxxxx
{
	dGeomCommonAnyControlCode = 0,
	dGeomColliderSetMergeSphereContactsControlCode = 1,
	dGeomColliderGetMergeSphereContactsControlCode = 2
};
enum xxxxxxxxx
{
    dGeomColliderMergeContactsValue__Default = 0, 
	dGeomColliderMergeContactsValue_None = 1,
	dGeomColliderMergeContactsValue_Normals = 2,
	dGeomColliderMergeContactsValue_Full = 3
};
extern int dGeomLowLevelControl (dGeomID geom, int controlClass, int controlCode, void *dataValue, int *dataSize);
extern void dGeomGetRelPointPos
(
  dGeomID geom, dReal px, dReal py, dReal pz,
  dVector3 result
);
extern void dGeomGetPosRelPoint
(
  dGeomID geom, dReal px, dReal py, dReal pz,
  dVector3 result
);
extern void dGeomVectorToWorld
(
  dGeomID geom, dReal px, dReal py, dReal pz,
  dVector3 result
);
extern void dGeomVectorFromWorld
(
  dGeomID geom, dReal px, dReal py, dReal pz,
  dVector3 result
);
extern void dGeomSetOffsetPosition (dGeomID geom, dReal x, dReal y, dReal z);
extern void dGeomSetOffsetRotation (dGeomID geom, const dMatrix3 R);
extern void dGeomSetOffsetQuaternion (dGeomID geom, const dQuaternion Q);
extern void dGeomSetOffsetWorldPosition (dGeomID geom, dReal x, dReal y, dReal z);
extern void dGeomSetOffsetWorldRotation (dGeomID geom, const dMatrix3 R);
extern void dGeomSetOffsetWorldQuaternion (dGeomID geom, const dQuaternion);
extern void dGeomClearOffset(dGeomID geom);
extern int dGeomIsOffset(dGeomID geom);
extern const dReal * dGeomGetOffsetPosition (dGeomID geom);
extern void dGeomCopyOffsetPosition (dGeomID geom, dVector3 pos);
extern const dReal * dGeomGetOffsetRotation (dGeomID geom);
extern void dGeomCopyOffsetRotation (dGeomID geom, dMatrix3 R);
extern void dGeomGetOffsetQuaternion (dGeomID geom, dQuaternion result);
#define CONTACTS_UNIMPORTANT			0x80000000
extern int dCollide (dGeomID o1, dGeomID o2, int flags, dContactGeom *contact,
	      int skip);
extern void dSpaceCollide (dSpaceID space, void *data, dNearCallback *callback);
extern void dSpaceCollide2 (dGeomID space1, dGeomID space2, void *data, dNearCallback *callback);
enum xxxx{
  dMaxUserClasses = 4
};
enum xxxxxx{
  dSphereClass = 0,
  dBoxClass,
  dCapsuleClass,
  dCylinderClass,
  dPlaneClass,
  dRayClass,
  dConvexClass,
  dGeomTransformClass,
  dTriMeshClass,
  dHeightfieldClass,
  dFirstSpaceClass,
  dSimpleSpaceClass = dFirstSpaceClass,
  dHashSpaceClass,
  dSweepAndPruneSpaceClass, 
  dQuadTreeSpaceClass,
  dLastSpaceClass = dQuadTreeSpaceClass,
  dFirstUserClass,
  dLastUserClass = dFirstUserClass + dMaxUserClasses - 1,
  dGeomNumClasses
};
extern dGeomID dCreateSphere (dSpaceID space, dReal radius);
extern void dGeomSphereSetRadius (dGeomID sphere, dReal radius);
extern dReal dGeomSphereGetRadius (dGeomID sphere);
extern dReal dGeomSpherePointDepth (dGeomID sphere, dReal x, dReal y, dReal z);
extern dGeomID dCreateConvex (dSpaceID space,
			       const dReal *_planes,
			       unsigned int _planecount,
			       const dReal *_points,
			       unsigned int _pointcount,
                   const unsigned int *_polygons);
extern void dGeomSetConvex (dGeomID g,
			     const dReal *_planes,
			     unsigned int _count,
			     const dReal *_points,
			     unsigned int _pointcount,
                 const unsigned int *_polygons);
extern dGeomID dCreateBox (dSpaceID space, dReal lx, dReal ly, dReal lz);
extern void dGeomBoxSetLengths (dGeomID box, dReal lx, dReal ly, dReal lz);
extern void dGeomBoxGetLengths (dGeomID box, dVector3 result);
extern dReal dGeomBoxPointDepth (dGeomID box, dReal x, dReal y, dReal z);
extern dGeomID dCreatePlane (dSpaceID space, dReal a, dReal b, dReal c, dReal d);
extern void dGeomPlaneSetParams (dGeomID plane, dReal a, dReal b, dReal c, dReal d);
extern void dGeomPlaneGetParams (dGeomID plane, dVector4 result);
extern dReal dGeomPlanePointDepth (dGeomID plane, dReal x, dReal y, dReal z);
extern dGeomID dCreateCapsule (dSpaceID space, dReal radius, dReal length);
extern void dGeomCapsuleSetParams (dGeomID ccylinder, dReal radius, dReal length);
extern void dGeomCapsuleGetParams (dGeomID ccylinder, dReal *radius, dReal *length);
extern dReal dGeomCapsulePointDepth (dGeomID ccylinder, dReal x, dReal y, dReal z);
extern dGeomID dCreateCylinder (dSpaceID space, dReal radius, dReal length);
extern void dGeomCylinderSetParams (dGeomID cylinder, dReal radius, dReal length);
extern void dGeomCylinderGetParams (dGeomID cylinder, dReal *radius, dReal *length);
extern dGeomID dCreateRay (dSpaceID space, dReal length);
extern void dGeomRaySetLength (dGeomID ray, dReal length);
extern dReal dGeomRayGetLength (dGeomID ray);
extern void dGeomRaySet (dGeomID ray, dReal px, dReal py, dReal pz,
		  dReal dx, dReal dy, dReal dz);
extern void dGeomRayGet (dGeomID ray, dVector3 start, dVector3 dir);
 extern void dGeomRaySetParams (dGeomID g, int FirstContact, int BackfaceCull);
 extern void dGeomRayGetParams (dGeomID g, int *FirstContact, int *BackfaceCull);
extern void dGeomRaySetFirstContact (dGeomID g, int firstContact);
extern int dGeomRayGetFirstContact (dGeomID g);
extern void dGeomRaySetBackfaceCull (dGeomID g, int backfaceCull);
extern int dGeomRayGetBackfaceCull (dGeomID g);
extern void dGeomRaySetClosestHit (dGeomID g, int closestHit);
extern int dGeomRayGetClosestHit (dGeomID g);
 extern dGeomID dCreateGeomTransform (dSpaceID space);
 extern void dGeomTransformSetGeom (dGeomID g, dGeomID obj);
 extern dGeomID dGeomTransformGetGeom (dGeomID g);
 extern void dGeomTransformSetCleanup (dGeomID g, int mode);
 extern int dGeomTransformGetCleanup (dGeomID g);
 extern void dGeomTransformSetInfo (dGeomID g, int mode);
 extern int dGeomTransformGetInfo (dGeomID g);
typedef struct dxHeightfieldData* dHeightfieldDataID;
typedef dReal (*dHeightfieldGetHeight)( void* p_user_data, int x, int z );
extern dGeomID dCreateHeightfield( dSpaceID space,
					dHeightfieldDataID data, int bPlaceable );
extern dHeightfieldDataID dGeomHeightfieldDataCreate(void);
extern void dGeomHeightfieldDataDestroy( dHeightfieldDataID d );
extern void dGeomHeightfieldDataBuildCallback( dHeightfieldDataID d,
				void* pUserData, dHeightfieldGetHeight* pCallback,
				dReal width, dReal depth, int widthSamples, int depthSamples,
				dReal scale, dReal offset, dReal thickness, int bWrap );
extern void dGeomHeightfieldDataBuildByte( dHeightfieldDataID d,
				const unsigned char* pHeightData, int bCopyHeightData,
				dReal width, dReal depth, int widthSamples, int depthSamples,
				dReal scale, dReal offset, dReal thickness,	int bWrap );
extern void dGeomHeightfieldDataBuildShort( dHeightfieldDataID d,
				const short* pHeightData, int bCopyHeightData,
				dReal width, dReal depth, int widthSamples, int depthSamples,
				dReal scale, dReal offset, dReal thickness, int bWrap );
extern void dGeomHeightfieldDataBuildSingle( dHeightfieldDataID d,
				const float* pHeightData, int bCopyHeightData,
				dReal width, dReal depth, int widthSamples, int depthSamples,
				dReal scale, dReal offset, dReal thickness, int bWrap );
extern void dGeomHeightfieldDataBuildDouble( dHeightfieldDataID d,
				const double* pHeightData, int bCopyHeightData,
				dReal width, dReal depth, int widthSamples, int depthSamples,
				dReal scale, dReal offset, dReal thickness, int bWrap );
extern void dGeomHeightfieldDataSetBounds( dHeightfieldDataID d,
				dReal minHeight, dReal maxHeight );
extern void dGeomHeightfieldSetHeightfieldData( dGeomID g, dHeightfieldDataID d );
extern dHeightfieldDataID dGeomHeightfieldGetHeightfieldData( dGeomID g );